<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.robsoncrafstman.novidades.java</groupId>
	<artifactId>curso-novidades-java-alura</artifactId>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<java.version>15</java.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<release>${java.version}</release> <!-- <release>13/14/15</release> -->
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
					<forceJavacCompilerUse>true</forceJavacCompilerUse>
					<parameters>true</parameters>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
